# bhook-demo

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/l3gacy/app/bhook/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  detour.c  log.h  native-lib.cpp  thread_hook.cpp
app/src/main/java/com/l3gacy/app/bhook/: App.kt  MainActivity.kt  NativeHacker.java  NativeLib.kt  ThreadHook.java
app/src/main/res/drawable/: border.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/l3gacy/app/bhook/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
test/: build.gradle
test/src/androidTest/java/com/l3gacy/lib/test/: ExampleInstrumentedTest.kt
test/src/main/cpp/: CMakeLists.txt  test.cpp
test/src/main/java/com/l3gacy/lib/test/: TestLib.kt
test/src/test/java/com/l3gacy/lib/test/: ExampleUnitTest.kt
